--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -43,7 +43,6 @@ km:
       description: "កម្មវិធីព្រះគម្ពីរត្រូវបានតម្លើងជាង ១០០ លាន​ដងហើយ ដែលជាព្រឹត្តិការណ៍ដ័មិនគួរឱ្យជឿ! តែយើងទើបតែចាប់​ផ្ដើមទេ ។​ សូមដោនឡូដកម្មវិធីព្រះគម្ពីរ​ឥតគិតថ្លៃនៅថ្ងៃនេះ​- ហើយចែកចាយ​ពី​កម្មវិធីនេះទៅ​មិត្តភក្ដិរបស់អ្នក​ ។ តោះ យើងបង្កើតប្រវតិ្តសាស្ដ្រជាមួយគ្នា ។​"
     mobile:
       title: "កម្មវិធីព្រះគម្ពីរ"
-      description: "មនុស្ស​រាប់សិប​លាន​អ្នក​កំពុង​ប្រើ​ប្រាស់កម្មវិធីព្រះគម្ពីរ​ ដើម្បី​អាន ស្ដាប់ ទស្សនា និង ចែករំលែក​ព្រះបន្ទូល​​រប​ស់​​ព្រះជាម្ចាស់​ ដើម្បីឱ្យក្លាយ​ជា​ផ្នែក​មួយ​នៅ​ក្នុង​ជីវិតរស់​នៅ​របស់​គេ។ ដោន​ឡូដ​កម្មវិធី​ដោយ​ឥត​គិត​ថ្លៃ​ហើយ​ចូល​ទៅ​កាន់​កំណត់​ចំណាំ, កំណត់​ត្រា, និង​គំរោង​អានគម្ពីរ​ពី​គ្រប់​ទៅ​កន្លែង។ សប្បាយ​ជាមួយ​នឹង​ជំនាន់​គម្ពីរ​រាប់​រយ រូម​បញ្ចូល​ទាំង​សំលេង​នៅ​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
     connections:
       index:
         title: "បាន​ភ្ជាប់​ទៅ​គណនី"
@@ -166,6 +165,7 @@ km:
       friends button: "រក​មិត្ត​ភក្តិ"
     action:
       go to scripture: "ទៅ​កាន់​បទ​គម្ពីរ"
+      add friend button: "បន្ថែម​មិត្ត"
       load more: "ទាញ​យក ថែម​ទៀត"
       like: "ចូល​ចិត្ត"
       liked: "បាន​ចូល​ចិត្ត"
@@ -184,6 +184,7 @@ km:
       delete highlight title: "លុប​គំនូស​ពណ៌​នេះ"
       delete bookmark title: "លុប​កំណត់​ចំណាំ​នេះ"
       delete note title: "លុប​កំណត់​ត្រា​នេះ"
+      read plan: "អាន"
   notifications:
     title: "ការ​តឿន​រំលឹក"
     none: "អ្នក​មិន​មាន​ការ​តឿន​រំលឹក​ទេ"
@@ -213,6 +214,7 @@ km:
     limit notice: "អ្នក​អាច​មាន​មិត្ត​ច្រើន​ដូច​ជា​150"
     limit description: "ការ​កំណត់​មិត្ត​លើ​កម្ម​វិធី​ព្រះ​គម្ពីរ​គឺ​ដើម្បី​អោយ​មនុស្ស​ស្គាល់​និងបង្កើត​នូវ​បរិយាកាស​នៃ​ភាព​ស្មោះត្រង់​ក្នុង​ការ​សន្ទនា​និង​ចែក​រំលែក​នូវ​អ្វី​ដែល​បាន​រក​ឃើញ​ជាមួយ​មិត្ត​ជិតស្និទ្ធ​របស់​គេ។"
   friendships:
+    name required: "ដើម្បី​ទទួល​យក​បទ​ពិសោធន៍​ដ៏​ល្អ​ក្នុង​ព្រះ​គម្ពីរ​ជាមួយ​មិត្ត​ភក្តិ សូម​អាប់​ឌែត​នូវ​ទម្រង់​របស់​អ្នក​ជាមួយ​នាម​ និង​កោត្ត​នាម"
     find friends title: "រក​មិត្ត​ភក្តិ"
     widget:
       find friends title: "រក​មិត្ត​ភក្តិ"
@@ -235,6 +237,7 @@ km:
       remove friend button: "ដក​មិត្ត​ចេញ"
       remove friend button title: "ដក​បុគ្គល​នេះ​ចេញ​ពី​បញ្ជីរ​មិត្ត​របស់​អ្ន"
       add friend button: "បន្ថែម​មិត្ត"
+      add friend button short: "បន្ថែម"
       add friend button title: "ផ្ញើរ %{user} សំណើរ​មិត្ត​ភាព"
       accept button: "ទទួល"
       accept request button: "ទទួល​យក​សំណើរ"
@@ -568,7 +571,6 @@ km:
       start reading: "ចាប់ផ្ដើមអាន"
     settings: "ការ​កំណត់"
     privacy:
-      visible to friends?: "តើ​អ្នក​ចង់​អោយ​ សកម្ម​ភាព​របស់​អ្នក ជាមួយ​នឹង​គំរោង​នេះ អោយ​មិត្ត​ភក្តិ​ឃើញ​ទេ?"
       private: "ឯក​ជន"
       public: "សាធារណះ"
     title: "គំរោង​អាន​"
@@ -604,8 +606,6 @@ km:
     search: "ស្វែង​រក"
     search placeholder: "ស្វែង​រកគំរោង %{category}"
     subscribe to plan: "ចាប់​ផ្ដើម​គំរោង​នេះ"
-    previous day: "ថ្ងៃមុន"
-    next day: "ថ្ងៃ​បន្ទាប់"
     reading completed _ mark and show next: "បន្ទាប់: %{next_reference}"
     which reading: "%{current} នៃ %{total}"
     done reading: "រួច​ហើយ"
@@ -623,9 +623,6 @@ km:
     catch me up: "ជួយ​ខ្ញុំ​ឡើង​វិញ"
     restart description: "លោក​អ្នក​អាច​ចាប់​ផ្ដើម​គំរោង​អាន​សារ​ជាថ្មី។ រាល់​ប្រវត្តិនៃ​ការ​អាន​របស់​លោក​អ្នក​នឹង​ត្រូវ​រៀប​ជាថ្មី​ ហើយ​ចាប់​ផ្ដើម​អាន​ពី​តំបូង"
     restart: "រៀប​គំរោង​ជាថ្មី"
-    privacy description: "នេះ​ជា​ជំរើស​របស់​លោក​អ្នក។ តើ​លោក​អ្នក​ចង់​អោយ​អ្នក​ផ្សេង​ឃើញ​ពី​គំរោង​អាន​របស់​អ្នក​ទេ?"
-    make private: "ធ្វើ​អោយ​ជា​ភាព​ឯក​ជន"
-    make public: "ធ្វើ​អោយ​ជា​សាធារណៈ"
     privacy title: "ភាព​ជាឯក​ជន"
     stop reading: "ឈប់​គំរោង​អាន​នេះ"
     accountability: "គណនីយភាព"
@@ -936,6 +933,9 @@ km:
   ui:
     yes button: "បាទ/ចា៎"
     no button: "ទេ"
+    cancel: "បោះ​បង់"
+    plans:
+      privacy: "តើ​អ្នក​ចង់​អោយ​ សកម្ម​ភាព​របស់​អ្នក ជាមួយ​នឹង​គំរោង​នេះ អោយ​មិត្ត​ភក្តិ​ឃើញ​ទេ?"
     loading indicator text: "កំពុង​ទាញ ..."
     pagination:
       next page: "ទំព័រ​បន្ទាប់"
