--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -36,6 +36,7 @@ mk:
       read all: "Прочитај сѐ"
       read less: "Прочитај помалку"
     share: "Сподели"
+    add comment: "Додади коментар"
     my connections: "Поврзани профили"
     connected as: "Поврзан си со %{connection} како %{username}."
     remove connection: "Отстрани ја оваа врска"
@@ -73,13 +74,11 @@ mk:
   meta:
     kids_app:
       title: "Апликација \"Библија\" за деца"
-      description: "Апликацијата „Библија за деца“ се објавува на 28 ноември, денот на благодарноста! Интерактивни библиски приказни во бесплатна апликација за iOS и Андроид. Види повеќе на bible.com/kids"
     100million:
       title: "Започнува со 100 милиони"
       description: "Апликацијата „Библија“ е преземена речиси 100 милиони пати - неверојатен успех! Но, ние со ова само се загреваме. Преземете ја бесплатната апликација „Библија“ денеска и потоа споделете ја со вашите пријатели. Ајде да ја создаваме историјата заедно."
     mobile:
       title: "Апликација „Библија“"
-      description: "Десетици милиони луѓе ја користат апликацијата „Библија“ да го читаат, слушаат, гледаат и споделуваат Светото писмо, правејќи го дел од секојдневието. Преземете ја бесплатната апликација и пристапете на вашите обележувачи, белешки и планови за читање во секое време, на секое место. Уживајте во стотици различни верзии, вклучувајќи и аудио верзии - сето тоа на вашиот мобилен уред."
     connections:
       index:
         title: "Поврзани профили"
@@ -214,6 +213,7 @@ mk:
       friends button: "Најди пријатели"
     action:
       go to scripture: "Оди до Свето Писмо"
+      add friend button: "Додај пријател"
       load more: "Вчитај повеќе"
       like: "Ми се допаѓа"
       liked: "Му/Ѝ се допадна"
@@ -232,6 +232,11 @@ mk:
       delete highlight title: "Избриши го ова нагласување"
       delete bookmark title: "Избриши го овој обележувач"
       delete note title: "Избриши ја оваа белешка"
+      more: "Повеќе"
+      read in bible: "Прочитај во Библијата"
+      read plan: "Читај"
+      about plan: "За планот за читање"
+      start plan: "Започни план"
   notifications:
     title: "Известувања"
     none: "Немаш никакви известувања"
@@ -261,6 +266,7 @@ mk:
     limit notice: "Можеш да имаш 150 пријатели"
     limit description: "Ограничувањето на пријателствата во Bible App со луѓе кои ги познавате добро, создаваат средина за искрени разговори и споделени искуства со доверливи пријатели."
   friendships:
+    name required: "За да ја искусиш Библијата со твоите пријатели, ажурирај го твојот Профил со твоето име и презиме."
     find friends title: "Најди пријатели"
     search by name: "Барај по име"
     search button: "Оди"
@@ -287,6 +293,7 @@ mk:
       remove friend button: "Отстрани пријател"
       remove friend button title: "Отстрани ја оваа личност од листата на пријатели"
       add friend button: "Додај пријател"
+      add friend button short: "Додади"
       add friend button title: "Испрати на %{user} барање за пријателство"
       accept button: "Прифати"
       accept request button: "Прифати го барањето"
@@ -296,7 +303,7 @@ mk:
     none user: "%{username} нема земено воопшто белешки."
     blank slate:
       heading: "Ти немаш белешки до сега"
-      description: "Како што ја читаш Библијата, кога ќе го почуствуваш тивкиот глас на Господ, ќе можеш веднаш да ги забележиш твоите мисли тука. Твоите белешки ќе бидат забележани како <em>private</em> зададени / default. Ако сакаш да споделиш белешка со твоите пријатели, едноставно отвори ја и промени ја во <em>public</em>."
+      description: "Како што ја читаш Библијата, кога ќе го почуствуваш тивкиот глас на Господ, ќе можеш веднаш да ги забележиш твоите мисли тука. Твоите белешки ќе бидат забележани како <em>лични</em> зададени по правило. Ако сакаш да споделиш белешка со твоите пријатели, едноставно отвори ја и промени ја во <em>јавни</em>."
     form:
       title field: "Наслов:"
       content field: "Содржина:"
@@ -313,8 +320,8 @@ mk:
     loading community: "Вчитување на белешките од заедницата..."
     no community notes: "Не постојат никакви белешки на заедницата за кои биле селектирани стихови. За да создадеш белешка, селектирај стих во читачот на Библијата а потоа притисни го копчето селектирано на врвот од читачот. "
     public: "Јавно"
-    private: "Приватно"
-    is private: "Бараната белешка е приватна"
+    private: "Лични"
+    is private: "Бараната белешка е лична"
     draft: "Проба"
     friends: "Пријатели"
     creation form errors: "Следните грешки оневозможија да ја креираш белешката:"
@@ -632,7 +639,7 @@ mk:
       readings 5 or more: "читања"
     settings: "Уредувања"
     privacy:
-      visible to friends?: "Дали би сакал твојата активност со овој план да биде видлива за твоите пријатели?"
+      visible to friends?: "Дали сакаш твоите пријатели да ги гледаат твоите активности во планот за читање?"
       private: "Лични"
       public: "Јавни"
     title: "Планови за читање"
@@ -668,8 +675,8 @@ mk:
     search: "Барај"
     search placeholder: "Пребарај ги плановите од %{category}"
     subscribe to plan: "Почни со овој план"
-    previous day: "Претходниот ден"
-    next day: "Следниот ден"
+    previous day: "ПРЕТХОДЕН ДЕН"
+    next day: "СЛЕДЕН ДЕН"
     reading completed _ mark and show next: "Следно: %{next_reference}"
     which reading: "%{current} од %{total}"
     done reading: "Готово"
@@ -688,9 +695,11 @@ mk:
     catch me up: "Стигни ме"
     restart description: "Може да го рестартираш твојот план. Се што си прочитал досега ќе биде поништено и неажурирано."
     restart: "Рестартирај го планот."
-    privacy description: "Изборот е твој. Дали сакаш други корисници да знаат дека го читаш овој план?"
-    make private: "Направи приватно"
-    make public: "Направи јавно"
+    privacy description:
+      private: "Твојот план е личен. Промени ги поставките во Само Пријатели за да ги споделиш активностите од планот со пријателите."
+      public: "Твојот план е видлив на пријателите. Префрли се на Лични за да ги направиш активностите на твојот план приватни."
+    make private: "Подеси на лично"
+    make public: "Сподели со пријатели"
     privacy title: "Приватност"
     stop reading: "Престани со читање на овој план"
     accountability: "Одговорност"
@@ -1004,6 +1013,9 @@ mk:
     characters remaining: "карактери остануваат"
     yes button: "Да"
     no button: "Не"
+    cancel: "Откажи"
+    plans:
+      privacy: "Дали би сакал твојата активност со овој план да биде видлива за твоите пријатели?"
     loading indicator text: "Се вчитува ..."
     loading: "Се вчитува"
     pagination:
