--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -36,6 +36,7 @@ mn:
       read all: "Бүгдийг унших"
       read less: "Бага унших"
     share: "Хуваалцах"
+    add comment: "Сэтгэгдэл нэмэх"
     my connections: "Холбогдсон Дансууд"
     connected as: "%{username} хэрэглэгчийн нэрээр %{connection} тэй холбогдсон байна."
     remove connection: "Энэ холболтыг цуцлах"
@@ -73,13 +74,16 @@ mn:
   meta:
     kids_app:
       title: "Хүүхдэд зориулсан Библи Апп"
-      description: "Хүүхдийн Библи Апп 11 сарын 28 нд Талархлын баяраар гарна. Идэвхитэй Библийн түүхүүдийг iOS ба Android д зориулсан үнэгүй аппаар татаж аваарай. Энэ тухай bible.com/kids ээс хараарай."
+      description: "Хүүхдийн Библи Апп нь Бурханы бидэнд заасан Есүсийн тухай Библийн түүхүүд, мөнхийн амийн бэлэг болон олон олон хичээлүүдийг хүүхдүүддээ заах гайхалтай арга зам юм. Энэхүү идэвхитэй аргаар хүүхдүүд Бурханы Үгийг уншин, эрдэнэсүүдийг цуглуулах замаар Үгтэй шууд холбогдох болно."
     100million:
       title: "100 Саяаас Эхэлдэг"
       description: "Библи Апп бараг 100 сая удаа суулгагдсан-гайхамшигтай амжилт! Энэ бол зөвхөн эхлэл. Библи Апп-г үнэгүйгээр өнөөдөр суулган-найзуудтайгаа хуваалц. Хамтдаа энэ түүхийг бичилцье."
     mobile:
       title: "Библи Апп"
-      description: "Библи Аппыг хэдэн арван сая хүмүүс Бурханы Үгийг унших, сонсох, үзэх, хуваалцах гэх мэтээр өдөр бүрийн амьдралынхаа нэг хэсэг болгож байна. Үнэгүй Аппыг татаж аваад номын хавчуурга, тэмдэглэл, уншлагын төлөвлөгөөгөө хаанаас ч үзэх боломжтой. Зөөврийн хэрэгслүүд дээрээ аудио болон хэдэн зуун орчуулгуудыг уншаарай."
+      description: "YouVersion -ы Библи Аппыг ашиглан хаана ч, хэзээ ч Бурханы Үгийг унш. Библи Уншлагын Төлөвлөгөөгөөр дамжуулан найзуудтайгаа Бичээсийг хуваалц, тодруул, хавчуурга хий,өдөр бүр Библи унших зуршилтай бол.  iOS, Android, Blackberry, Windows Утаснууд болон бусад ашиглах боломжтой."
+    site:
+      title: "Bible.com"
+      description: "Өдөр бүрийн амьдралдаа Библийн гайхамшиг болон үнэнийг авч ир. YouVersion -ы Библи Апптай хамт Bible.com-оор  smartphone эсвэл таблет, ба онлайнаар унших, үзэх, сонсох ба хуваалцах боломжтой."
     connections:
       index:
         title: "Холбогдсон Дансууд"
@@ -214,6 +218,7 @@ mn:
       friends button: "Найзууд олох"
     action:
       go to scripture: "Бичээс рүү оч"
+      add friend button: "Найзаар нэмэх"
       load more: "Илүү ачаалах"
       like: "Таалагдсан"
       liked: "Таалагдсан "
@@ -232,6 +237,11 @@ mn:
       delete highlight title: "Энэ тодруулгыг устга"
       delete bookmark title: "Энэ хавчуургыг устга"
       delete note title: "Энэ тэмдэглэлийг устга"
+      more: "Илүү"
+      read in bible: "Библиэс Унших"
+      read plan: "Унших"
+      about plan: "Тѳлѳвлѳгѳѳний талаар"
+      start plan: "Төлөвлөгөө эхлэх"
   notifications:
     title: "Мэдэгдлүүд"
     none: "Ямар ч мэдэгдэл байхгүй"
@@ -261,6 +271,7 @@ mn:
     limit notice: "Та 150 хүртэл найзтай байх боломжтой"
     limit description: "Та Библи Апп дахь нөхөрлөлийн хүрээгээ өөрийн сайн таних хүмүүсээр хязгаарласнаар дотно яриа өрнүүлэх хийгээд шинээр таньж мэдсэн зүйлээ итгэл бүхий найзуудтайгаа хуваалцах боломжтой."
   friendships:
+    name required: "Найзтайгаа хамт Библи судлахыг хүсвэл овог нэрийнхээ мэдээллийг шинэчил."
     find friends title: "Найзууд олох"
     search by name: "Нэрээр хайх"
     search button: "Хайх"
@@ -287,6 +298,7 @@ mn:
       remove friend button: "Найзаас хасах"
       remove friend button title: "Энэ хүнийг найзуудын жагсаалтаас хасах"
       add friend button: "Найзаар нэмэх"
+      add friend button short: "Нэмэх"
       add friend button title: "%{user}-д найз болох хүсэлт илгээх"
       accept button: "Хүлээн Авах"
       accept request button: "Хүсэлтийг Хүлээн Авах"
@@ -632,7 +644,7 @@ mn:
       readings 5 or more: "уншлагууд"
     settings: "Тохиргоо "
     privacy:
-      visible to friends?: "Та найзууддаа өөрийн Уншлагын төлөвлөгөөний үйл ажиллагааг харуулмаар байна уу?"
+      visible to friends?: "Та өөрийн найзууддаа Төлөвлөгөөний үйл ажиллагаагаа харуулахыг хүсч байна уу?"
       private: "Хувийн"
       public: "Нийтийн "
     title: "Унших Төлөвлөгөөнүүд"
@@ -668,8 +680,8 @@ mn:
     search: "Хайх"
     search placeholder: "%{category}-н Тѳлѳвлѳгѳѳнүүд Хайх"
     subscribe to plan: "Энэ Төлөвлөгөөг Эхлэх"
-    previous day: "Ѳмнѳх  Ѳдѳр"
-    next day: "Дараагийн Ѳдѳр"
+    previous day: "ТУХАЙН ӨДӨР"
+    next day: "ДАРААГИЙН ӨДӨР"
     reading completed _ mark and show next: "Дараах: %{next_reference}"
     which reading: "%{total} -с %{current} "
     done reading: "Болсон"
@@ -688,9 +700,11 @@ mn:
     catch me up: "Нөхөж унших"
     restart description: "Та төлөвлөгөөгөө дахин эхлүүлэх боломжтой. Таны бүх уншсан түүх болон таны уншиж байсан бүх явц устаж дахин эхлэх болно. "
     restart: "Тѳлѳвлѳгѳѳг Дахин Эхлүүлэх"
-    privacy description: "Та ѳѳрѳѳ мэд. Энэ тѳлѳвлѳгѳѳг уншиж байгааг бусад хүнд харуулах уу?"
-    make private: "Хувийн Болгох"
-    make public: "Нийтийн Болгох"
+    privacy description:
+      private: "Таны Төлөвлөгөө Хувийнх байна. Тохиргоогоо Зөвхөн Найзууд болгон өөрчилж найзуудтайгаа Төлөвлөгөөнийхөө үйл ажиллагааг хуваалц."
+      public: "Таны Төлөвлөгөөг найзууд чинь харах боломжтой байна. Төлөвлөгөөний үйл ажиллагаагаа нууцлахын тулд хувийнх болгон өөрчил."
+    make private: "Хувийнаар тохируулсан"
+    make public: "Найзуудтайгаа Хуваалцах"
     privacy title: "Нууцлал"
     stop reading: "Төлөвлөгөөг Зогсооё"
     accountability: "Хариуцлага Хүлээх Чадвар "
@@ -1004,6 +1018,9 @@ mn:
     characters remaining: "тэмдэгтүүд үлдсэн"
     yes button: "Тийм"
     no button: "Үгүй"
+    cancel: "Цуцлах"
+    plans:
+      privacy: "Та найзууддаа энэ Уншлагын төлөвлөгөөний үйл ажиллагааг харуулмаар байна уу?"
     loading indicator text: "Ачааллаж байна..."
     loading: "Ачааллаж байна"
     pagination:
