--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,7 @@
 ru:
+  time:
+    formats:
+      votd: "%B %-d, %Y"
   social:
     intro page:
       main heading: "Общение"
@@ -7,9 +10,9 @@ ru:
         user aaron: "Андрей Иванов"
         user andy: "Иван Петров"
         timestamp: "5 дней назад"
-        title: "Создана закладка для Пс. 30:8"
+        title: "Создана закладка для Пс. 31:7"
         verse: "Буду радоваться и веселиться о милости Твоей, потому что Ты призрел на бедствие мое, узнал горесть души моей."
-        reference: "Псалом 30:8"
+        reference: "Псалом 31:7"
         discover:
           copy: "В то время, как ваши друзья выделяют текст маркером, добавляют закладки и заметки, исследуйте и изучайте Писание вместе с ними."
           button: "С какого места я могу начать?"
@@ -33,6 +36,7 @@ ru:
       read all: "Читать все"
       read less: "Свернуть"
     share: "Поделиться"
+    add comment: "Добавить комментарий"
     my connections: "Подключенные аккаунты"
     connected as: "Вы подключены к %{connection} как %{username}."
     remove connection: "Удалить это подключение"
@@ -75,7 +79,9 @@ ru:
       description: "Приложение Библия было установлено почти 100 млн раз — это просто невообразимо! И мы только начинаем! Установите бесплатное приложение сегодня и поделитесь ссылкой на приложение с друзьями. Давайте вместе творить историю!"
     mobile:
       title: "Приложение Библия"
-      description: "Десятки миллионов людей пользуются приложением Библия, чтобы читать, слушать, смотреть и делиться Словом Божьим, и делать его частью своей ежедневной жизни. Установите бесплатное приложение и получите доступ к своим закладкам, заметкам и планам чтения с любого устройства. Читайте Библию в сотнях переводов, слушайте аудио версии прямо со своего мобильного устройства."
+      description: "Читайте Слово Божье в любое время и в любом месте с помощью приложения Библия от YouVersion. Делитесь Писанием с друзьями, выделяйте цветом стихи, ставьте закладки, а также погрузитесь в ежедневное чтение плана Библии. Доступно для iOS, Android, Blackberry, телефонов с Windows и др."
+    site:
+      title: "Bible.com"
     connections:
       index:
         title: "Подключенные аккаунты"
@@ -186,7 +192,17 @@ ru:
     lower: "или"
     upper: "ИЛИ"
   moments:
+    scripture unavailable: "Писание недоступно."
+    could not load: "Невозможно загрузить"
+    could not load verse: "Невозможно загрузить стих"
+    showing related: "Показаны связанные моменты"
     return to: "Вернуться к"
+    time past: "%{ago} назад"
+    user likes this: "%{last_liker_link} нравится это"
+    likes count more: "%{likes_count} еще"
+    likes count 2 more: "%{likes_count} еще"
+    likes count 3 or more: "%{likes_count} еще"
+    users like this: "%{last_liker_link} и %{more_link} нравится это"
     vod:
       title: "Стих дня"
     friendship:
@@ -200,6 +216,7 @@ ru:
       friends button: "Найти друзей"
     action:
       go to scripture: "Перейти к месту Писания"
+      add friend button: "Добавить друга"
       load more: "Показать ещё"
       like: "Мне нравится"
       liked: "Добавлено в избранное:"
@@ -218,6 +235,11 @@ ru:
       delete highlight title: "Удалить маркер"
       delete bookmark title: "Удалить закладку"
       delete note title: "Удалить заметку"
+      more: "Далее"
+      read in bible: "Читать в Библии"
+      read plan: "Читать"
+      about plan: "О плане чтения"
+      start plan: "Начать план чтения"
   notifications:
     title: "Уведомления"
     none: "Уведомлений нет"
@@ -247,6 +269,7 @@ ru:
     limit notice: "У вас может быть 150 друзей"
     limit description: "Ограничивая дружбу в приложении Библия теми, кого вы знаете и кому доверяете, вы создадите среду для честного общения и сможете открыто делиться своими мыслями."
   friendships:
+    name required: "Чтобы изучать Библию вместе с друзьями, пожалуйста, укажите свои имя и фамилию."
     find friends title: "Найти друзей"
     search by name: "Поиск по имени"
     search button: "Перейти"
@@ -273,6 +296,7 @@ ru:
       remove friend button: "Удалить"
       remove friend button title: "Удалить из списка друзей"
       add friend button: "Добавить друга"
+      add friend button short: "Добавить"
       add friend button title: "Отправить %{user} запрос дружбы"
       accept button: "Принять"
       accept request button: "Стать друзьями"
@@ -535,8 +559,10 @@ ru:
       picture error: "Извините, при обновлении фотографии возникла ошибка."
       picture_empty: "Пожалуйста, выберите картинку для загрузки"
       picture_too_large: "Размер фотографии должен быть меньше 1 Мб"
+      transfer_too_slow: "Выберите фотографию поменьше или найдите более быстрое соединение"
       picture_invalid_type: "Фотография должна быть в формате JPG, PNG, или GIF "
       picture_creation form errors: "Загрузка не удалась по следующим причинам:"
+      updated picture: "Фотография успешно загружена! Может занять несколько минут на обновление вашей фотографии."
       updated notifications: "Настройки уведомлений успешно обновлены."
       notifications token error: "Некорректная ссылка. Пожалуйста, войдите в систему, чтобы изменить настройки уведомлений."
       notification errors: "Следующая ошибка помешала обновлению настроек:"
@@ -611,9 +637,12 @@ ru:
       view my plans: "Просмотреть мои планы чтения"
       featured plans: "Основные планы"
       view all plans: "Посмотреть все планы чтения"
+      reading: "чтение"
+      readings: "чтения"
+      readings 5 or more: "чтения"
     settings: "Настройки"
     privacy:
-      visible to friends?: "Хотите ли вы, чтобы друзья видели вашу активность по этому плану?"
+      visible to friends?: "Вы хотите, чтобы ваши друзья видели активность вашего плана чтения?"
       private: "Личная"
       public: "Публичная"
     title: "Планы чтения"
@@ -649,13 +678,14 @@ ru:
     search: "Поиск"
     search placeholder: "Искать в планах: %{category}"
     subscribe to plan: "Начать этот план"
-    previous day: "Пред. день"
-    next day: "След. день"
+    previous day: "Предыдущий день"
+    next day: "Следующий день"
     reading completed _ mark and show next: "Далее: %{next_reference}"
     which reading: "%{current} из %{total}"
     done reading: "Готово"
     no verses: "На сегодня стихов нет"
     no content: "В этом плане нет чтения на сегодня, поэтому день был отмечен завершённым."
+    read today: "Сегодняшнее чтение"
     devotional: "Назидание"
     completion status _ below percentage: "Завершено"
     current progress html: "День <b>%{day}</b> из <b>%{total_days}</b>"
@@ -668,9 +698,11 @@ ru:
     catch me up: "Наверстать"
     restart description: "Вы можете перезапустить свой план. Вся история Вашего чтения и прогресс по плану будут обнулены и начаты сначала."
     restart: "Начать план заново"
-    privacy description: "Это Ваш выбор. Хотите ли Вы, чтобы другие пользователи видели, что Вы читаете этот план?"
+    privacy description:
+      private: "Ваш план чтения является приватным. Вы можете изменить настройки, чтобы только ваши друзья видели активность вашего плана."
+      public: "Ваш план чтения виден вашим друзьям. Вы можете изменить настройки, чтобы активность вашего плана стала приватной."
     make private: "Сделать приватным"
-    make public: "Сделать публичным"
+    make public: "Делиться с друзьями"
     privacy title: "Конфиденциальность"
     stop reading: "Остановить план"
     accountability: "Отчётность"
@@ -784,6 +816,7 @@ ru:
   donate:
     donate now: "Отправить пожертвование"
     donate now intl: "или через PayPal (др. страны)"
+    enter amount: "Введите сумму"
     promo 1: "Каждый пожертвованный Вами доллар поможет 10-и людям получить Библию на мобильное устройство."
     promo 2: "С YouVersion Библия всегда рядом. Посмотреть видео."
     promo 3: "В этом году более 5 миллиардов человек будут пользоваться мобильными телефонами. Сделать пожертвование."
@@ -980,9 +1013,14 @@ ru:
         tagline: "Давайте творить историю вместе!"
         button: "Поделиться приложением"
   ui:
+    characters remaining: "символов осталось"
     yes button: "Да"
     no button: "Нет"
+    cancel: "Отменить"
+    plans:
+      privacy: "Хотите ли вы, чтобы друзья видели вашу активность по этому плану?"
     loading indicator text: "Загрузка..."
+    loading: "загрузка"
     pagination:
       next page: "След. страница"
       previous page: "Пред. страница"
