--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -36,6 +36,7 @@ th:
       read all: "อ่านทั้งหมด"
       read less: "แสดงข้อความน้อยกว่านี้"
     share: "แบ่งปัน"
+    add comment: "เพิ่มความคิดเห็น"
     my connections: "บัญชีที่เชื่อมต่อ"
     connected as: "คุณได้เชื่อมต่อกับ %{connection} ในชื่อ %{username}."
     remove connection: "นำการเชื่อมต่อนี้ออก"
@@ -73,13 +74,16 @@ th:
   meta:
     kids_app:
       title: "แอพพระคัมภีร์สำหรับเด็ก"
-      description: "แอพพระคัมภีร์สำหรับเด็กเริ่มใช้เมื่อวันที่ 28 พฤศจิกายน ตรงกับวันขอบคุณพระเจ้า เรื่องราวจากพระคัมภีร์แบบมีปฏิสัมพันธ์กับผู้อ่านในแอพฟรีสำหรับระบบปฎิบัติการ iOS และ Android ดูตัวอย่างได้ที่ bible.com/kids"
+      description: "แอพพระคัมภีร์สำหรับเด็กเป็นทางที่ดีที่จะให้บุตรของคุณเรียนรู้เรื่องราวในพระคัมภีร์ที่เกี่ยวข้องกับ พระเยซู ของขวัญจากพระเจ้าคือชีวิตนิรันดร์ และบทเรียนต่างๆที่พระเจ้าได้สอนเรา ในการเรียนรู้จากประสบการณ์โดยตรง เด็กๆจะได้รับการเรียนรู้พระคำพระเจ้าด้วยภาพเคลื่อนไหวต่างๆในระหว่างการอ่านและเก็บสะสมขุมสมบัติ"
     100million:
       title: "เริ่มต้นที่ 100 ล้าน"
       description: "แอพพระคัมภีร์ได้ถูกติดตั้งเกือบจะครบ 100 ล้านครั้ง - นี่เป็นก้าวสำคัญที่น่าทึ่ง! แต่นี่เป็นเพียงจุดเริ่มต้น ดาวน์โหลดแอพพระคัมภีร์ฟรีในวันนี้ - และแบ่งปันแอพพระคัมภีร์กับเพื่อนของคุณ มาสร้างประวัติศาสตร์นี้ร่วมกัน"
     mobile:
       title: "แอพพระคัมภีร์"
-      description: "ผู้คนกว่าสิบล้านคนกำลังใช้แอพพระคัมภีร์เพื่ออ่าน, ฟัง, ดู และแบ่งปันพระคำของพระเจ้า ให้พระคัมภีร์เป็นส่วนหนึ่งของการใช้ชีวิตประจำวัน ดาวน์โหลดแอพพระคัมภีร์ฟรี และเข้าถึงที่คั่นหน้าของคุณ บันทึกต่างๆ และแผนการอ่านจากทุกหนทุกแห่ง เพลิดเพลินกับพระคัมภีร์กว่าร้อยฉบับ รวมถึงฉบับเสียง ทั้งหมดนี้บนโทรศัพท์มือถือของคุณ"
+      description: "อ่านพระวจนะคำของพระเจ้าในทุกเวลา ในทุกที่โดยใช้แอพพระคัมภีร์จาก YouVersion แบ่งปันข้อพระคัมภีร์กับเพื่อนๆ เน้นและคั่นหน้าข้อพระคัมภีร์ และทำให้เป็นกิจวัตรประจำวันด้วยแผนการอ่านพระคัมภีร์ มีใช้ดาวน์โหลดสำหรับ ไอโอเอส แอนดรอยด์ แบล็คเบอร์รี่ วินโดวส์โฟน และแพลตฟอร์มอื่น"
+    site:
+      title: "Bible.com"
+      description: "นำสัจจะและสิ่งดีงามจากพระคัมภีร์เข้าไปสู่ชีวิตในทุกๆวัน ด้วยแอพพระคัมภีร์จาก YouVersion คุณจะสามารถ ดู ฟัง และแบ่งปันไปยังสมาร์ทโฟน หรือแท็บเล็ต และผ่านบริการออนไลน์ที่ Bible.com"
     connections:
       index:
         title: "บัญชีที่เชื่อมต่อ"
@@ -214,6 +218,7 @@ th:
       friends button: "ค้นหาเพื่อน"
     action:
       go to scripture: "ไปยังข้อพระคัมภีร์"
+      add friend button: "เพิ่มเพื่อน"
       load more: "โหลดเพิ่ม"
       like: "ถูกใจ"
       liked: "ถูกใจ"
@@ -232,6 +237,11 @@ th:
       delete highlight title: "ลบการเน้นข้อพระคัมภีร์นี้"
       delete bookmark title: "ลบที่คั่นหน้านี้"
       delete note title: "ลบบันทึกนี้"
+      more: "ยังมีอีก"
+      read in bible: "อ่านในพระคัมภีร์"
+      read plan: "อ่าน"
+      about plan: "เกี่ยวกับแผนการอ่าน"
+      start plan: "เริ่มต้นแผนการอ่าน"
   notifications:
     title: "การแจ้งเตือน"
     none: "คุณไม่มีการแจ้งเตือนใดๆ"
@@ -261,6 +271,7 @@ th:
     limit notice: "คุณสามารถมีเพื่อนได้มากถึง 150 คน"
     limit description: "การตั้งขอบเขตของการใช้แอพพระคัมภีร์กับผู้คนที่คุณรู้จักดี จะสร้างสภาพแวดล้อมที่ดีในการสนทนากันอย่างซื่อตรง และแบ่งปันสิ่งที่ได้ค้นพบกับเพื่อนที่คุณไว้ใจ"
   friendships:
+    name required: "เพื่อที่จะมีประสบการณ์ในการใช้แอพพระคัมภีร์กับเพื่อน โปรดอัพเดทโปรไฟล์ของคุณด้วยชื่อและนามสกุลของคุณ"
     find friends title: "ค้นหาเพื่อน"
     search by name: "ค้นหาโดยชื่อ"
     search button: "ไป"
@@ -287,6 +298,7 @@ th:
       remove friend button: "ลบเพื่อนออก"
       remove friend button title: "ลบบุคคลนี้ออกจากรายการเพื่อน"
       add friend button: "เพิ่มเพื่อน"
+      add friend button short: "เพิ่ม"
       add friend button title: "ส่งคำร้องขอเป็นเพื่อไปยัง %{user}"
       accept button: "ยอมรับ"
       accept request button: "ยอมรับคำร้องขอ"
@@ -632,7 +644,7 @@ th:
       readings 5 or more: "กำลังอ่าน"
     settings: "การตั้งค่า"
     privacy:
-      visible to friends?: "คุณต้องการให้เพื่อนๆ ของคุณเห็นกิจกรรมของคุณในแผนการอ่านนี้หรือไม่?"
+      visible to friends?: "คุณต้องการให้เพื่อนของคุณเห็นความเคลื่อนไหวของแผนการอ่านหรือไม่?"
       private: "ส่วนตัว"
       public: "สาธารณะ"
     title: "แผนการอ่าน"
@@ -668,7 +680,7 @@ th:
     search: "ค้นหา"
     search placeholder: "ค้นหาแผนฯตาม %{category}"
     subscribe to plan: "เริ่มแผนนี้"
-    previous day: "วันก่อน"
+    previous day: "วันก่อนหน้า"
     next day: "วันต่อไป"
     reading completed _ mark and show next: "ต่อไป: %{next_reference}"
     which reading: "%{current} ของ %{total}"
@@ -688,9 +700,11 @@ th:
     catch me up: "อ่านตามแผนให้ทัน"
     restart description: "คุณสามารถเริ่มแผนฯใหม่ได้ ประวัติการอ่านและความคืบหน้าจะถูกล้างใหม่และเริ่มที่จุดเริ่มต้น"
     restart: "เริ่มแผนการอ่านใหม่"
-    privacy description: "คุณต้องการที่จะให้ผู้อื่นเห็นว่าคุณกำลังอ่านแผนฯนี้หรือไม่?"
-    make private: "ทำให้เป็นส่วนตัว"
-    make public: "ทำให้เป็นสาธารณะ"
+    privacy description:
+      private: "แผนการอ่านของคุณเป็นส่วนตัว ลองเปลี่ยนแปลงการตั้งค่าเป็น เฉพาะเพื่อน เพื่อแบ่งปันความเคลื่อนไหวของแผนการอ่านกับเพื่อน"
+      public: "เพื่อนของคุณสามารถเห็นแผนการอ่านของคุณ ลองเปลี่ยนเป็น ส่วนตัว เพื่อให้ความเคลื่อนไหวของแผนการอ่านเป็นส่วนตัว"
+    make private: "ตั้งให้เป็นส่วนบุคคล"
+    make public: "แบ่งปันไปยังเพื่อน"
     privacy title: "ความเป็นส่วนตัว"
     stop reading: "หยุดแผนนี้"
     accountability: "ความรับผิดชอบ"
@@ -1004,6 +1018,9 @@ th:
     characters remaining: "เหลือตัวอักษรอีก"
     yes button: "ใช่"
     no button: "ไม่"
+    cancel: "ยกเลิก"
+    plans:
+      privacy: "คุณต้องการให้เพื่อนๆ ของคุณเห็นกิจกรรมของคุณในแผนการอ่านนี้หรือไม่?"
     loading indicator text: "กำลังโหลด ..."
     loading: "กำลังโหลด"
     pagination:
