--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -36,6 +36,7 @@ tl:
       read all: "Basahin lahat"
       read less: "Basahin ang ilan"
     share: "Ibahagi"
+    add comment: "Magkomento"
     my connections: "Mga Kaugnay na Accounts"
     connected as: "Ikaw ay konektado sa %{connection} bilang %{username}."
     remove connection: "Tanggalin ang koneksyon na ito"
@@ -73,13 +74,16 @@ tl:
   meta:
     kids_app:
       title: "Ang Pambatang App ng Bibliya"
-      description: "Ang Bible App for Kids ay ilulunsad sa ika-28 ng Nobyembre, Araw ng Pasasalamat! Mga interactive na mga kwento ng Bibliya sa isang libreng app para sa iOS at Android. Tingnan ito sa bible.com/kids"
+      description: "Ang Bible App for Kids ay nakalilibang na paraan para malaman ng mga bata ang kwento sa Bibliya tungkol kay Jesus, ang handog na buhay na walang hanggan, at ang maraming aral na turo ng Diyos. Sa mga interactive na kwentong ito, mababasa ng mga bata ang Salita ng Diyos kasama ang nakatutuwang larawan habang nagkakaroon ng puntos sa pagbabasa at nadadagdagan ang yaman."
     100million:
       title: "Ito ay Nagsisimula sa <em>100 milyon</em>"
       description: "Ang Bible App ay na-download nang mahigit 100 milyong beses - kahanga-hangang tagumpay! Ngunit ito ay simula pa lamang. I-download ang libreng Bible App ngayon - at ibahagi ang app sa iyong mga kaibigan. Sama-sama nating gawin ang kasaysayan."
     mobile:
       title: "Ang Bible app"
-      description: "Milyun-milyong tao na ang gumagamit ng App ng Bibliya upang magbasa, makinig, manuod at magbahagi ng Salita ng Diyos, upang gawin itong bahagi ng kanilang pang-araw-araw na buhay.  I-download ang libreng app at subukan ang bookmark, notes, at mga babasahing gabay kahit saan. Mag-enjoy sa daan-daang bersyon, kasama ang awdyo, sa lahat ng mobile na aparato."
+      description: "Magbasa ng Salita ng Diyos kahit kailan, kahit saan gamit ang YouVersion App ng Bibliya. Magbahagi ng mga bersikulo sa mga kaibigan, mag-haylayt at magtanda ng nabasa sa Bibliya, at magbasa araw-araw mula sa Babasahing Gabay. Mayroon sa iOS, Android, Blackberry, Windows Phone at marami pang iba."
+    site:
+      title: "Bible.com"
+      description: "Dalhin ang kagandahan at katotohanan ng Bibliya sa pang-araw araw. Gamit ang YouVersion Bible App, maaring magbasa, manuod, makinig, at magbahagi sa iyong smartphone o tablet, at online sa Bible.com."
     connections:
       index:
         title: "Mga Kaugnay na Accounts"
@@ -190,17 +194,17 @@ tl:
     lower: "o"
     upper: "O"
   moments:
-    scripture unavailable: "Wala ang babasahin"
+    scripture unavailable: "Hindi maaring gamitin."
     could not load: "Hindi ma-load"
-    could not load verse: "Hindi ma-load ang talata"
-    showing related: "Pinapakita ang mga pakikipag-ugnayan"
+    could not load verse: "Hindi ma-load \nang mga talata"
+    showing related: "Ipinapakita ang mga kaugnay na mga sandali"
     return to: "Bumalik sa"
     time past: "%{ago} na"
     user likes this: "Nagustuhan ni %{last_liker_link}"
     likes count more: "%{likes_count} pa"
     likes count 2 more: "%{likes_count} pa"
-    likes count 3 or more: "%{likes_count} pa"
-    users like this: "%{last_liker_link} at %{more_link} ang may gusto"
+    likes count 3 or more: "%{likes_count} at higit pa"
+    users like this: "%{last_liker_link} at %{more_link} pa ang may gusto nito"
     vod:
       title: "Salita ng Diyos para sa Araw na Ito"
     friendship:
@@ -214,6 +218,7 @@ tl:
       friends button: "Maghanap ng mga Kaibigan"
     action:
       go to scripture: "Magpunta sa banal na kasulatan"
+      add friend button: "Magdagdag ng Kaibigan"
       load more: "Magpakita ng higit pa"
       like: "I-like"
       liked: "Ni-like"
@@ -232,6 +237,11 @@ tl:
       delete highlight title: "Burahin ang haylayt na ito"
       delete bookmark title: "Burahin ang bookmark na ito"
       delete note title: "Burahin ang talang ito"
+      more: "Karagdagan"
+      read in bible: "Basahin sa Bibliya"
+      read plan: "Basahin"
+      about plan: "Patungkol sa Plano"
+      start plan: "Simulan ang Plano"
   notifications:
     title: "Mga abiso"
     none: "Walang anumang abiso para sa iyo"
@@ -261,6 +271,7 @@ tl:
     limit notice: "Maaring magkaroon nang hanggang 150 na mga kaibigan"
     limit description: "Ang paglimita ng iyong mga pagkakaibigan sa Bible App sa mga taong iyong kakilala ay lumilikha ng isang kapaligiran ng mga tapat na usapin at mga kaparis na pagtuklas kasama ang mga kaibigan."
   friendships:
+    name required: "Upang makasama ang mga kaibigan sa pagbabasa ng Bibliya, i-update ang Profile gamit ang iyong buong pangalan."
     find friends title: "Maghanap ng mga Kaibigan"
     search by name: "Maghanap ayon sa pangalan"
     search button: "Puntahan"
@@ -287,6 +298,7 @@ tl:
       remove friend button: "Alisin ang kaibigan"
       remove friend button title: "Alisin ang kaibigan na ito mula sa lista ng iyong mga kaibigan"
       add friend button: "Magdagdag ng Kaibigan"
+      add friend button short: "Magdagdag"
       add friend button title: "Magpadala kay %{user} ng hiling upang maging magkaibigan"
       accept button: "Tanggapin"
       accept request button: "Tanggapin ang kahilingan"
@@ -552,7 +564,7 @@ tl:
       transfer_too_slow: "Pumili ng mas maliit na larawan o humanap ng mas mabilis na koneksyon"
       picture_invalid_type: "Ang litrato ay dapat JPG, PNG, o GIF"
       picture_creation form errors: "Ang (mga) sumusunod na error ay balakid sa pag-update ng iyong litrato:"
-      updated picture: "Tagumpay! Nabago na ang larawan mo. Maaring magtagal ng ilang minuto bago makita ang bagong avatar."
+      updated picture: "Tagumpay! Na-update mo ang iyong larawan. Maaaring tumagal ng hanggang sa ilang minuto para ma-update ang iyong avatar."
       updated notifications: "Tagumpay! Na-update mo ang iyong mga notification setting."
       notifications token error: "Di valid na token, maaaring mag-sign-in para ayusin ang iyong pang-abisong mga setting. "
       notification errors: "Ang mga sumusunod na error(s) ang dahilan ng hindi pag-update ng iyong mga abiso:"
@@ -627,12 +639,12 @@ tl:
       view my plans: "Tingnan ang mga Babasahin"
       featured plans: "Tampok na mga Babasahin"
       view all plans: "Tingnan ang mga Babasahin"
-      reading: "binabasa"
-      readings: "mga binabasa"
-      readings 5 or more: "mga binabasa"
+      reading: "Babasahin"
+      readings: "Mga Babasahin"
+      readings 5 or more: "Mga Babasahin"
     settings: "Mga Setting"
     privacy:
-      visible to friends?: "Gusto mo bang makita ng iyong mga kaibigan ang mga gawain mo patungkol sa planong ito?"
+      visible to friends?: "Gusto mo bang ipakita sa iyong mga kaibigan ang mga kaganapan sa iyong Plano?"
       private: "Pribado"
       public: "Pampubliko"
     title: "Mga Babasahing Gabay"
@@ -668,8 +680,8 @@ tl:
     search: "Maghanap"
     search placeholder: "Maghanap ng Plans sa %{category} "
     subscribe to plan: "Umpisahan ang Plan na Ito"
-    previous day: "Nakalipas na Araw"
-    next day: "Susunod na Araw"
+    previous day: "NAKARAANG ARAW"
+    next day: "SUSUNOD NA ARAW"
     reading completed _ mark and show next: "Susunod: %{next_reference}"
     which reading: "%{current} ng %{total}"
     done reading: "Tapos"
@@ -688,9 +700,11 @@ tl:
     catch me up: "Ihabol Ako"
     restart description: "Pwede mong umpisahan ulit ang iyong plan. Lahat ng iyong nabasa ay maire-reset sa simula."
     restart: "I-restart ang Plan"
-    privacy description: "Nais mo bang makita ng ibang tao na binabasa mo ang plan na ito? Pwede kang pumili."
+    privacy description:
+      private: "Ang iyong Plano ay Pribado. Gawing Mga Kaibigan Lamang ang iyong setting para makapagbahagi ng mga kaganapan sa mga kaibigan."
+      public: "Ang Plano mo ay nakikita ng mga kaibigan. Gawing Pribado upang maging ekslusibong para sa iyo lamang ang mga kaganapan sa iyong Plano."
     make private: "Gawing Pribado"
-    make public: "Gawing Publiko"
+    make public: "Ibahagi sa mga Kaibigan"
     privacy title: "Privacy"
     stop reading: "Itigil ang Pagbasa sa Plan na Ito"
     accountability: "Accountability"
@@ -788,8 +802,8 @@ tl:
     create failure: "May pagkakamali sa pag-save ng haylayt"
     destroy success: "Ang haylayt ay burado na"
     destroy failure: "May pagkakamali sa pagbura ng haylayt"
-    creation error: "Paumanhin, hindi pwedeng ma-highlight."
-    delete error: "Paumanhin, hindi maalis ang highlight."
+    creation error: "Paumanhin, hindi ito maaring i-haylayt."
+    delete error: "Paumanhin, hindi maaring alisin ang pag-hahaylayt."
     form:
       save button: "I-save ang haylayt"
   searching:
@@ -940,7 +954,7 @@ tl:
       small: "Maliit"
       medium: "Medium"
       large: "Malaki"
-      highlights: "Highlights"
+      highlights: "Mga Haylayt"
       contrast: "Contrast"
       'on': "On"
       'off': "Off"
@@ -1004,8 +1018,11 @@ tl:
     characters remaining: "natitirang karakter"
     yes button: "Oo"
     no button: "Hindi"
-    loading indicator text: "Nagkakarga ..."
-    loading: "Naglo-load..."
+    cancel: "Itigil"
+    plans:
+      privacy: "Gusto mo bang gawing visible o ipakita sa iyong mga kaibigan ang mga kaganapang ito?"
+    loading indicator text: "Naglo-load..."
+    loading: "Naglo-load"
     pagination:
       next page: "Susunod na Pahina"
       previous page: "Nakaraang Pahina"
