--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -36,6 +36,7 @@ en-GB:
       read all: "Read all"
       read less: "Read less"
     share: "Share"
+    add comment: "Add a comment"
     my connections: "Connected accounts"
     connected as: "You are connected to %{connection} as %{username}."
     remove connection: "Remove this connection"
@@ -73,13 +74,16 @@ en-GB:
   meta:
     kids_app:
       title: "The Bible App for Kids"
-      description: "The Bible App for kids launches on November 28, Thanksgiving Day! Interactive Bible stories in a  free app for iOS and Android. See a preview at bible.com/kids"
+      description: "The Bible App for kids is a great way for your children to learn Biblical stories about Jesus, our gift of eternal life, and the many lessons God teaches us. In this interactive experience, children directly engage with God’s Word with delightful visuals while earning points for reading and collecting treasures."
     100million:
       title: "It Starts with 100 million"
       description: "The Bible App has been installed almost 100 million times - an incredible milestone! But we are just getting started. Download the free Bible App today - and then share the app with your friends. Let’s make history together."
     mobile:
       title: "The Bible App"
-      description: "Tens of millions of people are using the Bible App to read, listen to, watch and share God's Word, making it a part of their daily lives. Download the free app and access your bookmarks, notes, and reading plans from anywhere. Enjoy hundreds of versions, including audio, all on your mobile device."
+      description: "Read God’s word at anytime, anywhere using the YouVersion Bible App. Share scripture with friends, highlight and bookmark passages, and create a daily habit with Bible plans. Available for iOS, Android, Blackberry, Windows Phone and more."
+    site:
+      title: "Bible.com"
+      description: "Bring the beauty and truth of the Bible into everyday life. With the YouVersion Bible App, you can read, watch, listen, and share on your smartphone or tablet, and online at Bible.com."
     connections:
       index:
         title: "Connected Accounts"
@@ -214,6 +218,7 @@ en-GB:
       friends button: "Find friends"
     action:
       go to scripture: "Go to scripture"
+      add friend button: "Add friend"
       load more: "Load more"
       like: "Like"
       liked: "Liked"
@@ -232,6 +237,11 @@ en-GB:
       delete highlight title: "Delete this highlight"
       delete bookmark title: "Delete this bookmark"
       delete note title: "Delete this note"
+      more: "More"
+      read in bible: "Read in Bible"
+      read plan: "Read"
+      about plan: "About plan"
+      start plan: "Start plan"
   notifications:
     title: "Notifications"
     none: "You don't have any notifications"
@@ -261,6 +271,7 @@ en-GB:
     limit notice: "You can have as many as 150 friends"
     limit description: "Limiting your Bible App friendships to people you know well creates an environment for honest conversations and shared discoveries with trusted friends."
   friendships:
+    name required: "To experience the Bible with friends, update your profile with your first and last name."
     find friends title: "Find friends"
     search by name: "Search by name"
     search button: "Go"
@@ -287,6 +298,7 @@ en-GB:
       remove friend button: "Remove friend"
       remove friend button title: "Remove this person from your friend list"
       add friend button: "Add friend"
+      add friend button short: "Add"
       add friend button title: "Send %{user} a friend request"
       accept button: "Accept"
       accept request button: "Accept request"
@@ -632,7 +644,7 @@ en-GB:
       readings 5 or more: "readings"
     settings: "Settings"
     privacy:
-      visible to friends?: "Would you like your activity with this plan to be visible to your friends?"
+      visible to friends?: "Do you want your friends to see your plan activity?"
       private: "Private"
       public: "Public"
     title: "Reading plans"
@@ -668,7 +680,7 @@ en-GB:
     search: "Search"
     search placeholder: "Search %{category} plans"
     subscribe to plan: "Start this plan"
-    previous day: "Previous day"
+    previous day: "Prev day"
     next day: "Next day"
     reading completed _ mark and show next: "Next: %{next_reference}"
     which reading: "%{current} of %{total}"
@@ -688,9 +700,11 @@ en-GB:
     catch me up: "Catch me up"
     restart description: "You can restart your plan. All of your reading history and progress will be reset and start from the beginning."
     restart: "Restart plan"
-    privacy description: "It's your choice. Do you want people to see that you're reading this plan?"
-    make private: "Make private"
-    make public: "Make public"
+    privacy description:
+      private: "Your plan is private. Switch your setting to friends only to share your plan activity with friends."
+      public: "Your plan is visible to friends. Switch to private to make your plan activity private."
+    make private: "Set to private"
+    make public: "Share with friends"
     privacy title: "Privacy"
     stop reading: "Stop reading this plan"
     accountability: "Accountability"
@@ -1004,6 +1018,9 @@ en-GB:
     characters remaining: "characters remaining"
     yes button: "Yes"
     no button: "No"
+    cancel: "Cancel"
+    plans:
+      privacy: "Would you like your activity with this plan to be visible to your friends?"
     loading indicator text: "Loading ..."
     loading: "Loading"
     pagination:
